# CPSC_323_Compiler_Project

./: 0  CS323 Documentation.docx  Cargo.toml  FSM_Lexer.drawio  README.md  file.txt
docs/: CS323 Documentation 3.docx  CS323 Documentation_PART1.docx  CoverPage5GorupInfoAL.doc
resources/: main.rs
src/: info.txt  main.rs  parser.rs  parser_old.rs  parser_stack.rs  sample_input.txt  sample_input2.txt  sample_input3.txt  sample_output.txt  sample_output2.txt  sample_output3.txt  sampple_output_old.txt
src/file_handling/: file_handling.rs
src/lexer/: fsm.rs  lexer.rs
src/parser/: parser.rs
src/tokens/: tokens.rs
